# datools

./: README.md  datools.cabal
.stack-work/install/x86_64-osx/lts-8.0/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  datools-0.1.0.0-CAzdFxsvTySAbfTg1tzoBK  extensible-exceptions-0.1.1.4-IyAM3ARTqH7BVZ5oHMMtXH  hmatrix-0.18.0.0-Jq6rGX8YpZCYBXqZ1BG1O  hostname-1.0-LHxcvBDHWay1RGMj1Uzenf  regex-base-0.93.2-AYjYAsBidAc8f5XNm9b2Aa  regex-posix-0.95.2-KQJt29lnRa45d6bFn9XkFO  storable-complex-0.2.2-G9QzpmZTKvgKKVagrcRWdL  test-framework-0.8.1.1-7YvscNBXXw5Lj2Ypw31c2N  test-framework-hunit-0.3.0.2-ItCdzJs3gi27V64u8RQwaC  test-framework-quickcheck2-0.3.0.3-3BvhXUbVGHg7IQrkbhC6DS  tf-random-0.5-BGjMgO8m67W8CHiEl15kZ7  utf8-string-1.0.1.1-1DpjxLeTvGg7ttZZojxJR5
.stack-work/install/x86_64-osx/lts-8.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSdatools-0.1.0.0-Liiqe4AOY4e5U6XV99USYi-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-8.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/datools-0.1.0.0-CAzdFxsvTySAbfTg1tzoBK/: Lib.dyn_hi  Lib.hi  Utils.dyn_hi  Utils.hi
.stack-work/install/x86_64-osx/lts-8.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/datools-0.1.0.0-Liiqe4AOY4e5U6XV99USYi/: Lib.hi  Utils.dyn_hi
.stack-work/install/x86_64-osx/lts-8.0/8.0.2/pkgdb/: datools-0.1.0.0-Liiqe4AOY4e5U6XV99USYi.conf  package.cache
src/CSV/: Processor.hs
src/Numeric/: Functions.hs  SpecFunctions.hs
tests/: Spec.hs  tests.hs
tests/Tests/: SpecFunctions.hs
