name:                datools
version:             0.1.0.0
synopsis:            Data analysis tools in Haskell
description:         Please see READM.md
homepage:            https://github.com/githubuser/datools#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Math, Numeric
build-type:          Simple
extra-source-files:  README.md, diagrams/*.svg
extra-doc-files:     diagrams/*.svg
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.SpecFunctions
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
  default-language:    Haskell2010

test-suite datools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  other-modules:       Tests.SpecFunctions
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , datools
                     , hmatrix
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , HUnit
                     , QuickCheck
                     , Chart
                     --, Chart-cairo
                     , Chart-diagrams

source-repository head
  type:     git
  location: https://github.com/githubuser/datools
